# digital-image-processing

./: LICENSE  README.md  exercicio1.py  exercicio2.1.py  exercicio2.2.py  exercicio2.3.py  exercicio2.py  exercicio3.1.py  exercicio3.2.py  exercicio3.py  exercicio4.py  exercicio5.py  exercicio6.py  exercicio7.py  kit_fpga_pdi.md  pyproject.toml
