[tool.poetry]
name = "processamento-digital-imagens"
version = "0.1.0"
description = ""
authors = ["alison.almeida <alisonalmeida.py@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.11.0.86"
numpy = "^2.2.4"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
